playbook/app/pb_kits/playbook/pb_table/styles/_vertical_border.scss
[class^=pb_table] {
  &.vertical-border {
    td, th, .pb_table_td, .pb_table_th {
      border-right: 1px solid $border_light !important;
    }

    thead tr:not(:first-child) th {
      border-right: 1px solid $border_light !important;
    }

    // **Advanced Table** specific rules to eliminate double borders when vertical-border is active
    .pb_advanced_table &,
    &[data-vertical-border="true"] {
      // Remove first column box-shadow (preserve border-right in Chrome and use CSS var to respect column group border colors)
      .table-header-cells:first-child,
      .table-header-cells-custom:first-child,
      td:first-child,
      .pb_table_td:first-child,
      .checkbox-cell.checkbox-cell-header:first-child {
        box-shadow: none !important;
        border-right: 1px solid var(--column-border-color, #{$border_light}) !important;
      }

      .pb_table_td:nth-child(2) {
        box-shadow: none !important;
      }
    }
    // --- End Advanced Table First Column Code Section ---

    @media screen and (min-width: $screen-xs-min) {
      tr:hover, .pb_table_tr:hover {
        td:last-child, .pb_table_td:last-child {
          border-right-color: darken($border_light, 10%) !important;
        }
      }
    }

    // Firefox-specific fix for sticky elements
    @-moz-document url-prefix() {
      // Target sticky headers
      &.sticky-header {
        th:not(:last-child) {
          border-right: none !important;
          box-shadow: 1px 0 0 0 $border_light !important;
        }

        .pb_advanced_table_body {
          .pinned-row {
            td:not(:first-child):not(:last-child) {
              border-right: none !important;
              box-shadow: 1px 0 0 0 $border_light !important;
            }
          }
        }
      }

      // Target sticky left columns
      &.sticky-left-column {
        td[style="left"], th[style="left"] {
          border-right: none !important;
          box-shadow: 1px 0 0 0 $border_light !important;
        }
      }

      // Target sticky right columns
      &.sticky-right-column {
        td[style="right"], th[style="right"] {
          border-right: none !important;
          box-shadow: 1px 0 0 0 $border_light !important;
        }
      }

      // Handle hover states in Firefox
      @media screen and (min-width: $screen-xs-min) {
        tr:hover, .pb_table_tr:hover {
          td:last-child, .pb_table_td:last-child {
            &[style="left"], &[style="right"] {
              border-right: none !important;
              box-shadow: 1px 0 0 0 darken($border_light, 10%) !important;
            }
          }
        }
      }
    }
  }
}

